feat:added images to the webpage

--- a/index.html
+++ b/index.html
@@ -18,5 +18,10 @@
             </li>
         </ul>
     </nav>
+    <section>
+        <figure>
+            <img src="assets/images/city.jpg" alt="An image of urban Dublin">
+        </figure>
+    </section>
 </body>
-</html>
+</html> 
