--- a/coast.html
+++ b/coast.html
@@ -18,5 +18,10 @@
             </li>
         </ul>
     </nav>
+    <section>
+        <figure>
+            <img src="assets/images/beach.jpg" alt="An image of a dublin beach">
+        </figure>
+    </section>
 </body>
 </html>
